__________________________

Solarus 1.6.0 (in progress)
___________________________

Engine changes
--------------

* Treasure dialogs are now optional (#1076).
* Don't center the hero on non-blocking streams (#1063).
* Fix random movement giving the same path for all entities on Mac (#1083).
* Fix possible crash when reloading very old savegame files (#1064).
* Fix crash when a sprite PNG file is missing.
* Fix crash when calling entity:test_obstacles() on an unloaded map.
* Fix crash when opening a chest with a missing treasure dialog (#1089).
* Fix joypad deadzone issue (#672) by strycore.
* Fix compilation error with Clang 3.9 in SNES_SPC.
* Fix possible compilation error when HAVE_UNISTD_H has no value (#1084).
* Fix hero:on_movement_changed() not called (#1095).
* Fix scripts failing to load if a directory exists with the same name (#1100).
* Improve Lua error messages.

Lua API changes
---------------

Changes that introduce incompatibilities:

* 

Changes that do not introduce incompatibilities:

* Add a function sol.main.get_quest_version() (#1058) by Nate-Devv.
* Add methods entity:get_layer() and entity:set_layer().
* Add a method sprite:get_frame_src_xy() (#1093).
* sprite:get_num_frames() can now optionally take an animation and direction.
* sprite:get_frame_delay() can now optionally take an animation.
* sprite:get_size() can now optionally take an animation and direction.
* sprite:get_origin() can now optionally take an animation and direction.

Data files format changes
-------------------------

* Make the tileset entities image optional (#884).

___________________________

Solarus 1.5.3 (2016-04-01)
__________________________

* Speed up loading maps by keeping tilesets in a cache (#1019).
* Fix text_surface:set_horizontal/vertical_alignment() not working.
* Fix parallax dynamic tiles still displayed when disabled or invisible.
* Improve error message of non-square tile patterns with diagonal obstacles.

__________________________
